# online_shop

./: .gitignore  README.md  main.py  pyproject.toml
cart/: cart.py  views.py
coupons/: admin.py  forms.py  models.py  views.py
coupons/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
myshop/: celery.py  settings.py  urls.py
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
payment/: tasks.py  urls.py  views.py  webhooks.py
shop/: admin.py  models.py  recommender.py  views.py
shop/migrations/: 0001_initial.py
staticfiles/css/: order_detail.css  pdf.css
templates/: base.html  cancelled.html  cart_detail.html  completed.html  create.html  created.html  detail.html  list.html  pdf.html  process.html
templates/admin/orders/order/: detail.html
